--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 					<div class="timeline-block">
                 <div class="timeline-content">
                  <a href="https://github.com/shubhamtech-tech787-thepost-wbtask--ShubhamKumar--/" target="_blank">
-                  <h2 class="position">Shubham Kumara Web Dev MIT Post</h2>
+                  <h2 class="position">Shubham Kumar Web Dev MIT Post</h2>
                   <h3 class="company"></h3>
                   <p class="job-desc">This Website was designed by me for specified task in my University.</p>
 					</a>
@@ -318,7 +318,7 @@
 		</div>
     </section>
 
-    <a class="block-btn" href="Kumar_Resume.pdf" target="_blank"> <span class="text">View my full résumé</span> <img class="icon" src="images/download.png" alt="download resume"> </a>
+    <a class="block-btn" href="https://github.com/shubham-tech2003/Resume" target="_blank"> <span class="text">View my full résumé</span> <img class="icon" src="images/download.png" alt="download resume"> </a>
 
     <section id="portfolio-section" class="section">
       <div class="section-wrapper">
